# svgis

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  HISTORY.rst  Makefile  README.md  pyproject.toml  readme.md  requirements.txt  setup.py  tox.ini
.github/workflows/: python.yml
docs/: Makefile  cli.rst  conf.py  draw.rst  index.rst  styles.rst  svg.rst  svgis.rst
docs/api/: bounding.rst  draw.rst  index.rst  style.rst  svg.rst
src/svgis/: __init__.py  bounding.py  cli.py  dom.py  draw.py  errors.py  graticule.py  projection.py  style.py  svg.py  svgis.py  transform.py  utils.py
svgis/: __init__.py  bounding.py  chloropleth.py  cli.py  clip.py  convert.py  css.py  dom.py  draw.py  errors.py  feature.py  graticule.py  layer.py  osm.py  projection.py  scale.py  style.py  svg.py  svgis.py  transform.py  utils.py
svgis/cli/: __init__.py  actions.py  formatter.py  main.py
svgis/osm/: __init__.py  converter.py  wrappers.py
svgis/test_data/: sample-json.osm  sample-xml.osm
tests/: Makefile  __init__.py  profile.py  test_bounding.py  test_cli.py  test_clip.py  test_convert.py  test_css.py  test_dom.py  test_draw.py  test_error.py  test_feature.py  test_graticule.py  test_layer.py  test_map.py  test_projection.py  test_projection_draw.py  test_style.py  test_svg.py  test_svgis.py  test_transform.py  test_utils.py
tests/fixtures/: chicago_bounds_2790.json  cook_bounds_4269.json  issue-8.geojson  tl_2015_11_place.json
tests/test_data/: cb_2014_us_nation_20m.json  test.proj4  tl_2015_11_place.json
