[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "svgis"
author = "Neil Freeman"
author-email = "contact@fakeisthenewreal.org"
home-page = "https://github.com/fitnr/svgis"
keywords = "svg, gis, geojson, shapefile, cartography, map, geodata"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
description-file = "README.md"
requires = [
    "six>=1.7.3,<2",
    "click>=6.2,<8",
    "pyproj>=2.6",
    "fiona>=1.8",
    "tinycss2>=1.0.2",
    "utm>=0.4.0,<1",
    "cssselect>=1.1.0",
    "lxml>=4.5.0",
]

[tool.flit.metadata.requires-extra]
numpy = ["numpy"]
clip = ["shapely>=1.5.7"]
simplify = ["visvalingamwyatt>=0.1.1"]
dev = [
    "coverage[toml]",
    "pylint>2.5.0"
]
doc = [
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.flit.scripts]
svgis = "svgis.cli:main"

[tool.coverage.run]
branch = true
source = ["svgis"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError",
]

[tool.black]
line-length = 120
target-version = ["py38"]
include = 'py$'
skip-string-normalization = true

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.basic]
good-names = "f,g,i,j,k,x,y,z"

[tool.pylint.messages_control]
disable = "invalid-name"

[tool.pylint.format]
max-line-length = 120
